samples/_failures_safe/1761323966_61eff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_758b3451.c: In function ‘main’:
./samples/SAFE/__tmp_758b3451.c:145:9: error: expected declaration or statement at end of input
  145 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_758b3451.c:145:9: error: expected declaration or statement at end of input
